rules on mobile fix

--- a/style.css
+++ b/style.css
@@ -436,7 +436,8 @@ body {
 @media (max-width: 500px) {
   .rules-wrapper {
     width: 100%;
-    height: 100vh;
+    /* height: 100vh; */
+    height: -webkit-fill-available;
     border-radius: 0;
     padding: 0;
   }
